smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/doc-comments-on-namespace.smithy
// Syntax error at line 4, column 1: Expected a namespace definition but found DOC_COMMENT('/// This comment is ignored.\n')
$version: "2.0"

/// This comment is ignored.
namespace smithy.example

